--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,8 +44,10 @@ limitations under the License. -->
   </plurals>
 
   <!-- Preference Titles -->
-  <string name="messages_header">Messages</string>
-  <string name="sync_header">Sync</string>
+  <string name="general_header">Allgemein</string>
+  <string name="display_header">Anzeige</string>
+  <string name="feedback_header">Rückmeldung</string>
+  <string name="other_header">Sonstige</string>
 
   <!-- Messages Preferences -->
   <string name="signature_title">Your signature</string>
@@ -71,7 +73,8 @@ limitations under the License. -->
   <string name="one_year_range">Einjahresverlauf</string>
   <string name="five_year_range">Fünfjahresverlauf</string>
   <string name="max_range">Maximalverlauf</string>
-  <string name="use_postmarket">Vor- und Nachbörsliche Werte anzeigen</string>
+  <string name="use_postmarket">Nachbörsliche Werte</string>
+  <string name="use_postmarket_desc">Vor- und Nachbörsliche Werte anzeigen.</string>
   <string name="notes">Anmerkungen</string>
   <string name="alerts">Benachrichtigungen</string>
   <string name="alert_above">Wenn überschritten</string>
@@ -128,7 +131,7 @@ limitations under the License. -->
   <string name="delete_all_assets_msg">Alle Aktien wurden aus Ihrem Aktienbestand entfernt.</string>
   <string name="asset_summary_text">Gesamtaktienbestand</string>
   <string name="group_header">Gruppe</string>
-  <string name="title_activity_add">Aktie hinzufügen</string>
+  <string name="title_activity_add">Aktien hinzufügen</string>
   <string name="title_activity_stockdata">Aktiendetails</string>
   <string name="import_error">Die ausgewählte Datei konnte nicht importiert werden.</string>
   <string name="import_csv_symbolcolumn_error">Die ausgewählte CSV-Datei konnte nicht importiert werden. Die Spalte für den Aktiennamen ist nicht vorhanden.</string>
@@ -152,4 +155,27 @@ limitations under the License. -->
   <string name="note_deleted">Anmerkung wurde gelöscht.</string>
   <string name="alert_event_notification_title">Ereignis \'%1$s\' für Aktie %2$s</string>
   <string name="alert_event_notification">Ereignismeldung für Aktie %1$s\nEreignis \'%2$s\'\n%3$s</string>
+  <string name="summary_stocks">Aktien</string>
+  <string name="summary_stocks_with_assets">Aktien mit Bestand</string>
+  <string name="summary_alerts">Benachrichtigungen</string>
+  <string name="summary_events">Ereignisse</string>
+  <string name="summary_note">Anmerkungen</string>
+  <string name="summary_number_of_stocks">Anzahl Aktien</string>
+  <string name="summary_total_purchase_price">Gesamtkaufpreis</string>
+  <string name="summary_total_assets">Gesamtbestand</string>
+  <string name="summary_gain">Gewinn</string>
+  <string name="summary_loss">Verlust</string>
+  <string name="summary_gain_loss">Gewinn - Verlust</string>
+  <string name="summary_dividend_assets">Bestand mit Dividende</string>
+  <string name="summary_no_dividend_assets">Bestand ohne Dividende</string>
+  <string name="summary_dividend_per_year">Dividende pro Jahr</string>
+  <string name="update_groups_title">Gruppenliste bearbeiten</string>
+  <string name="update_groups_desc">Namen und zugeordnete Farben der Gruppenliste bearbeiten.</string>
+  <string name="trillion_abbr">Trill.</string>
+  <string name="billion_abbr">Mrd.</string>
+  <string name="million_abbr">Mio.</string>
+  <string name="import_section_header">Importieren</string>
+  <string name="button_import">Importieren</string>
+  <string name="export_section_header">Exportieren</string>
+  <string name="button_export">Exportieren</string>
 </resources>
