--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -67,7 +67,7 @@ limitations under the License. -->
   <string name="sort_change">Nach Änderung sortieren</string>
   <string name="sort_group">Nach Gruppe sortieren</string>
   <string name="sort_group_unsorted">Nach Einfügedatum sortiert</string>
-  <string name="sort_assets">Nach Aktienbestand sortieren</string>
+  <string name="sort_assets">Nach Bestand sortieren</string>
   <string name="sort_profit">Nach Gewinn sortieren</string>
   <string name="sort_dividend">Nach Dividende sortieren</string>
 
@@ -131,7 +131,6 @@ limitations under the License. -->
   <string name="delete_all_confirm">Sind Sie sich sicher?</string>
   <string name="delete_all_desc">Entfernt alle Aktien und die dazugehörigen Daten.</string>
   <string name="debug_title">Debuginformationen</string>
-  <string name="debug_desc">Zeigt zusätzliche Debuginformationen an.</string>
   <string name="shares_not_zero">Die Anzahl der Aktien darf nicht 0 sein.</string>
   <string name="price_not_zero">Der Preis der Aktie darf nicht 0 sein.</string>
   <string name="add_asset">Zum Aktienbestand hinzufügen</string>
@@ -227,4 +226,5 @@ limitations under the License. -->
   <string name="donate">Donate</string>
   <string name="email_feedback_summary">Senden Sie uns Anregungen und Verbesserungen.</string>
   <string name="email_feedback_title">EMail senden</string>
+  <string name="system_header">System</string>
 </resources>
