--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -220,4 +220,6 @@ limitations under the License. -->
   <string name="email_feedback_title">EMail senden</string>
   <string name="bought_for">Gekauft für %1$s</string>
   <string name="version">Version</string>
+  <string name="example_List_delete_all">\n\n***\nWählen sie in den Einstellungen die Funktion \'Alle Daten entfernen\', um diese Beispielliste zu löschen.\n***</string>
+  <string name="example_List_note">Beispielanmerkung.\n1234 abcd.\nLetzte Zeile der Anmerkung.</string>
 </resources>
